--- a/style.css
+++ b/style.css
@@ -53,9 +53,54 @@ input[placeholder], [placeholder], *[placeholder]
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  
+}
+.about-bg
+{
+  background-image: 
+  linear-gradient(120deg,
+   transparent 50%,
+   rgba(78, 38, 105, 0.9)50%
+  ),
+  url('images/bg/about-bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   
 }
 .custom-bg-color
 {
   background: #f6f6f6;
+}
+
+.card-hover-custom
+{
+  transition: all 0.7s ease! important;
+}
+.card-hover-custom:hover
+{
+  text-shadow: none !important;
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  -webkit-transform: scale(1.1) !important;
+  -ms-transform: scale(1.1)!important;
+  transform: scale(1.1) !important;
+  z-index: 2;
+}
+.card-overlapping
+{
+  margin-top: -30px !important;
+}
+.card-overlapping-colors
+{
+  background-color:#2E3967!important ;
+}
+.next-btn{
+  outline: none !important;
+  cursor: pointer;
+}
+.pervious-btn{
+  outline: none !important;
+  cursor: pointer;
 }
